--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomicfoundation/hardhat-verify": "^2.0.13",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
+    "@uniswap/sdk-core": "^7.7.2",
+    "@uniswap/v3-sdk": "^3.25.2",
+    "@uniswap/router-sdk": "^2.0.3",
     "@openzeppelin/contracts": "^5.0.2",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/ethers-v6": "^0.5.0",
