--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.22.10",
     "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-storage-layout": "^0.1.7",
     "hardhat-deploy": "^0.12.1",
     "mocha": "^10.2.0",
     "prettier-plugin-solidity": "^1.3.1",
